# backend/api/query.py
@@ -59,52 +59,63 @@ def get_field_distinct():
 # Completion Suggester (Aufwendig, aber schnell) - https://www.elastic.co/guide/en/elasticsearch/reference/6.8/search-suggesters-completion.html
     
 def build_Query(es_client,index, args):
-  query = Search(using=es_client, index=index) 
-  name = args.get('name')
+  query = Search(using=es_client, index=index)
   
-  developer = args.get('developer')
-  publisher = args.get('publisher')
-  platforms = args.get('platforms')
-  genres = args.get('genres')
-  categories = args.get('categories')
+  print(f"Get args: {args}")
+  name = args.get('name')
+  developer = args.get('developerTags')
+  publisher = args.get('publisherTags')
+  platforms = args.get('platformTags')
+  genres = args.get('genreTags')
+  categories = args.get('categorieTags')
   sort = args.get('sort')
   mode = args.get('mode')
   price_start = args.get('price_start')
   price_end = args.get('price_end')
   
+  print(f"Args: Name:{name}, developer:{developer}, publisher:{publisher}, Name:{platforms}/n,genres:{genres},categories:{categories},sort:{sort},mode:{mode},/nprice_start:{price_start},price_end:{price_end}")
+  
   if developer is not None:
+    print("dev")
     query = query.filter('terms', developer=[developer])
     
   if publisher is not None:
+    print("pub")
     query = query.filter('terms', publisher=[publisher])
     
   if platforms is not None:
+    print("plat")
     platforms_list = platforms.split(',')
     for platform in platforms_list:
       query = query.query(Q('bool',must=[Q('match',platforms=platform)]))
     #query = query.filter('terms', platforms=platforms_list)
     
   if genres is not None:
+    print("genres")
     genres_list = genres.split(',')
     for genre in genres_list:
       query = query.query(Q('bool',must=[Q('match',genres=genre)]))
     #query = query.filter('terms', genres=genres_list)
   
   if categories is not None:
+    print("categories")
     categories_list = categories.split(',')
     for category in categories_list:
       query = query.query(Q('bool',must=[Q('match',categories=category)]))
     #query = query.filter('terms', categories=categories_list)
     
   if price_start is not None and price_end is not None:
+    print("price")
     query = query.filter('range', price={'gte':'price_start', 'lte':'price_end'})
     
   if name is not None:
+    print("name")
     query = query.query('match', name=name)
    
   if sort is not None and mode is not None:
+    print("sort")
     query = query.sort({sort: {'order': mode}})
-    
+  print(query.to_dict())
   return query
   
 def build_fuzzy_query(name):
